# sparky

./: .gitignore  CMakeLists.txt  README.md  TODO.md  dependencies.lua  emimpl.cmake  glimpl.cmake  premake5.lua
cmake/: emsparky-config.cmake.in  sparky-config.cmake.in
dependencies/: CMakeLists.txt
dependencies/freeimage/: CHANGES.txt  CMakeLists.txt  premake5.lua
dependencies/freetype/: CMakeLists.txt  Sparky-core.vcxproj  premake5.lua
dependencies/freetype-em/: CMakeLists.txt  premake5.lua
dependencies/freetype-gl/: CMakeLists.txt  opengl.h  premake5.lua  texture-atlas.c
dependencies/glad/: CMakeLists.txt  premake5.lua
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/glfw/: CHANGES.md  CMakeLists.txt  premake5.lua
dependencies/gorilla-audio/: CHANGELOG.txt  CMakeLists.txt  premake5.lua
dependencies/gorilla-audio/src/: ga_stream.c  gau.c
dependencies/gorilla-audio/src/common/: gc_thread.c
dependencies/gorilla-audio/src/devices/: ga_openal.c
dependencies/jsoncpp/: CMakeLists.txt  premake5.lua
dependencies/ogg/: CMakeLists.txt  premake5.lua
dependencies/openal-soft/: CMakeLists.txt  premake5.lua
dependencies/openal-soft/config/: config.h
dependencies/spdlog/: CMakeLists.txt  premake5.lua
dependencies/vorbis/: CMakeLists.txt  premake5.lua
dependencies/vorbis/src/: lsp.c
scripts/: build  install  setup
sparky/: CMakeLists.txt
sparky-core/: CMakeLists.txt  premake5.lua
sparky-core/include/: sparky-application.h  sparky-audio.h  sparky-core.h  sparky-gl.h  sparky-graphics.h  sparky-math.h  sparky-utils.h
sparky-core/include/application/: Application.h  Window.h
sparky-core/include/audio/: Sound.h  SoundManager.h
sparky-core/include/graphics/: AnimatedSprite.h  Animation2D.h  BatchRenderer2D.h  Buffer.h  Font.h  FontManager.h  Group.h  IndexBuffer.h  Label.h  Layer.h  Renderable2D.h  Renderer2D.h  Shader.h  Simple2DRenderer.h  SimpleRenderer2D.h  Sprite.h  StaticSprite.h  Texture.h  TextureAtlas.h  VertexArray.h
sparky-core/include/math/: mat4.h  vec2.h  vec3.h  vec4.h
sparky-core/include/utils/: FileUtils.h  ImageUtils.h  Log.h  StatusUtils.h  StringUtils.h  TimerUtils.h
sparky-core/src/: CMakeLists.txt
sparky-core/src/application/: Application.cpp  CMakeLists.txt  Window.cpp
sparky-core/src/audio/: Sound.cpp  SoundManager.cpp
sparky-core/src/graphics/: AnimatedSprite.cpp  Animation2D.cpp  BatchRenderer2D.cpp  Buffer.cpp  CMakeLists.txt  Font.cpp  FontManager.cpp  Group.cpp  IndexBuffer.cpp  Label.cpp  Layer.cpp  Shader.cpp  Simple2DRenderer.cpp  SimpleRenderer2D.cpp  Sprite.cpp  StaticSprite.cpp  Texture.cpp  TextureAtlas.cpp  TextureAtlasManager.cpp  TextureManager.cpp  VertexArray.cpp  anager.cpp
sparky-core/src/math/: CMakeLists.txt  mat4.cpp  vec2.cpp  vec3.cpp  vec4.cpp
sparky-core/src/utils/: CMakeLists.txt  FileUtils.cpp  ImageUtils.cpp  Log.cpp  StatusUtils.cpp  utils.cpp
sparky-demo/: CMakeLists.txt  premake5.lua
sparky-demo/src/demo/: CMakeLists.txt  Game.cpp  Game.h  TileLayer.h  main.cpp
sparky-demo/src/res/animations/: blinky-anim.json
sparky-demo/src/res/atlas/: pacman-atlas.json  pacman.json
sparky-demo/src/res/config/: config.json
sparky-demo/src/res/shaders/es3/: basic.frag  basic.vert  basicnl.frag
sparky-demo/src/res/shaders/gl33/: basic.frag  basic.vert  basicnl.frag
sparky/include/: CMakeLists.txt  sparky-base.h  sparky-utils.h  sparky.h
sparky/include/application/: Application.h  CMakeLists.txt
sparky/include/audio/: CMakeLists.txt  SoundManager.h
sparky/include/graphics/: BatchRenderer2D.h  Buffer.h  CMakeLists.txt  Font.h  IndexBuffer.h  Layer.h  Renderable2D.h  Sprite.h  TextureAtlas.h  TextureAtlasManager.h  TextureManager.h
sparky/include/math/: CMakeLists.txt  mat4.h  vec2.h
sparky/include/utils/: CMakeLists.txt  ImageUtils.h  StatusUtils.h  TimerUtils.h
sparky/src/: CMakeLists.txt
sparky/src/application/: Application.cpp  CMakeLists.txt  Window.cpp
sparky/src/audio/: CMakeLists.txt
sparky/src/graphics/: BatchRenderer2D.cpp  CMakeLists.txt  Font.cpp  Group.cpp  IndexBuffer.cpp  Label.cpp  Texture.cpp  TextureAtlasManager.cpp  VertexArray.cpp
sparky/src/math/: CMakeLists.txt  vec2.cpp  vec3.cpp
sparky/src/utils/: CMakeLists.txt  ImageUtils.cpp  Log.cpp
