set(SOURCES
	src/autofit/autofit.c
	src/base/ftbase.c
	src/base/ftbbox.c
	src/base/ftbitmap.c
	src/base/ftdebug.c
	src/base/ftfstype.c
	src/base/ftgasp.c
	src/base/ftglyph.c
	src/base/ftgxval.c
	src/base/ftinit.c
	src/base/ftlcdfil.c
	src/base/ftmm.c
	src/base/ftotval.c
	src/base/ftpatent.c
	src/base/ftpfr.c
	src/base/ftstroke.c
	src/base/ftsynth.c
	src/base/ftsystem.c
	src/base/fttype1.c
	src/base/ftwinfnt.c
	src/base/ftxf86.c
	src/bdf/bdf.c
	src/cache/ftcache.c
	src/cff/cff.c
	src/cid/type1cid.c
	src/gzip/ftgzip.c
	src/lzw/ftlzw.c
	src/pcf/pcf.c
	src/pfr/pfr.c
	src/psaux/psaux.c
	src/pshinter/pshinter.c
	src/psnames/psmodule.c
	src/raster/raster.c
	src/sfnt/sfnt.c
	src/smooth/smooth.c
	src/truetype/truetype.c
	src/type1/type1.c
	src/type42/type42.c
	src/winfonts/winfnt.c
	)

add_library(freetype-em STATIC
	${SOURCES}
	)
add_library(sparky::freetype-em ALIAS freetype-em)

target_include_directories(freetype-em PUBLIC
	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
	$<INSTALL_INTERFACE:include/${pkgname}/freetype-em/include>
	)

target_sources(freetype-em PUBLIC
	FILE_SET HEADERS
	FILES
	include/freetype/ftxf86.h
	include/freetype/ftsnames.h
	include/freetype/ftwinfnt.h
	include/freetype/ftsizes.h
	include/freetype/fttypes.h
	include/freetype/ftmm.h
	include/freetype/config/ftstdlib.h
	include/freetype/config/ftheader.h
	include/freetype/config/ftconfig.h
	include/freetype/config/ftoption.h
	include/freetype/config/ftmodule.h
	include/freetype/ftmodapi.h
	include/freetype/ftbzip2.h
	include/freetype/ttunpat.h
	include/freetype/fttrigon.h
	include/freetype/ftbbox.h
	include/freetype/ftgzip.h
	include/freetype/internal/sfnt.h
	include/freetype/internal/internal.h
	include/freetype/internal/ftdebug.h
	include/freetype/internal/psaux.h
	include/freetype/internal/t1types.h
	include/freetype/internal/pshints.h
	include/freetype/internal/ftdriver.h
	include/freetype/internal/autohint.h
	include/freetype/internal/ftstream.h
	include/freetype/internal/tttypes.h
	include/freetype/internal/ftvalid.h
	include/freetype/internal/ftobjs.h
	include/freetype/internal/ftpic.h
	include/freetype/internal/fttrace.h
	include/freetype/internal/ftmemory.h
	include/freetype/internal/ftgloadr.h
	include/freetype/internal/ftserv.h
	include/freetype/internal/services/svprop.h
	include/freetype/internal/services/svmm.h
	include/freetype/internal/services/svwinfnt.h
	include/freetype/internal/services/svttcmap.h
	include/freetype/internal/services/svotval.h
	include/freetype/internal/services/svgldict.h
	include/freetype/internal/services/svpscmap.h
	include/freetype/internal/services/svkern.h
	include/freetype/internal/services/svpsinfo.h
	include/freetype/internal/services/svpfr.h
	include/freetype/internal/services/svgxval.h
	include/freetype/internal/services/svxf86nm.h
	include/freetype/internal/services/svbdf.h
	include/freetype/internal/services/svsfnt.h
	include/freetype/internal/services/svtteng.h
	include/freetype/internal/services/svcid.h
	include/freetype/internal/services/svttglyf.h
	include/freetype/internal/services/svpostnm.h
	include/freetype/internal/ftrfork.h
	include/freetype/internal/ftcalc.h
	include/freetype/ftoutln.h
	include/freetype/ftadvanc.h
	include/freetype/ftsynth.h
	include/freetype/fterrors.h
	include/freetype/ftgasp.h
	include/freetype/ftstroke.h
	include/freetype/ftcache.h
	include/freetype/ftotval.h
	include/freetype/freetype.h
	include/freetype/ftincrem.h
	include/freetype/ftttdrv.h
	include/freetype/fterrdef.h
	include/freetype/ttnameid.h
	include/freetype/ftpfr.h
	include/freetype/ftgxval.h
	include/freetype/ftcffdrv.h
	include/freetype/ftchapters.h
	include/freetype/tttags.h
	include/freetype/ftlzw.h
	include/freetype/ftsystem.h
	include/freetype/t1tables.h
	include/freetype/ftimage.h
	include/freetype/tttables.h
	include/freetype/ftcid.h
	include/freetype/ftglyph.h
	include/freetype/ftmoderr.h
	include/freetype/ftbitmap.h
	include/freetype/ftlist.h
	include/freetype/ftmac.h
	include/freetype/ftlcdfil.h
	include/freetype/ftautoh.h
	include/freetype/ftbdf.h
	include/freetype/ftrender.h
	include/ft2build.h
	)

target_sources(freetype-em PRIVATE
	src/pcf/pcf.h
	src/pcf/pcfdrivr.h
	src/pcf/pcfutil.h
	src/pcf/pcfread.h
	src/pcf/pcferror.h
	src/type1/t1load.h
	src/type1/t1afm.h
	src/type1/t1driver.h
	src/type1/t1tokens.h
	src/type1/t1errors.h
	src/type1/t1parse.h
	src/type1/t1objs.h
	src/type1/t1gload.h
	src/cache/ftcglyph.h
	src/cache/ftcimage.h
	src/cache/ftcsbits.h
	src/cache/ftccback.h
	src/cache/ftcmanag.h
	src/cache/ftccache.h
	src/cache/ftcmru.h
	src/cache/ftcerror.h
	src/sfnt/ttcmap.h
	src/sfnt/ttpost.h
	src/sfnt/sfntpic.h
	src/sfnt/pngshim.h
	src/sfnt/ttload.h
	src/sfnt/ttbdf.h
	src/sfnt/ttcmapc.h
	src/sfnt/ttkern.h
	src/sfnt/sfobjs.h
	src/sfnt/ttmtx.h
	src/sfnt/ttsbit.h
	src/sfnt/sfdriver.h
	src/sfnt/sferrors.h
	src/winfonts/winfnt.h
	src/winfonts/fnterrs.h
	src/bdf/bdferror.h
	src/bdf/bdfdrivr.h
	src/bdf/bdf.h
	src/smooth/ftsmooth.h
	src/smooth/ftspic.h
	src/smooth/ftsmerrs.h
	src/smooth/ftgrays.h
	src/type42/t42drivr.h
	src/type42/t42objs.h
	src/type42/t42parse.h
	src/type42/t42types.h
	src/type42/t42error.h
	src/cff/cffload.h
	src/cff/cf2font.h
	src/cff/cf2error.h
	src/cff/cffparse.h
	src/cff/cf2ft.h
	src/cff/cf2read.h
	src/cff/cf2types.h
	src/cff/cf2fixed.h
	src/cff/cffpic.h
	src/cff/cffcmap.h
	src/cff/cfftypes.h
	src/cff/cf2hints.h
	src/cff/cfftoken.h
	src/cff/cffobjs.h
	src/cff/cffgload.h
	src/cff/cf2stack.h
	src/cff/cf2blues.h
	src/cff/cf2glue.h
	src/cff/cf2arrst.h
	src/cff/cf2intrp.h
	src/cff/cffdrivr.h
	src/cff/cfferrs.h
	src/gzip/zutil.h
	src/gzip/inftrees.h
	src/gzip/inffixed.h
	src/gzip/infcodes.h
	src/gzip/zlib.h
	src/gzip/infblock.h
	src/gzip/infutil.h
	src/gzip/zconf.h
	src/lzw/ftzopen.h
	src/gxvalid/gxvcommn.h
	src/gxvalid/gxvfeat.h
	src/gxvalid/gxvmorx.h
	src/gxvalid/gxverror.h
	src/gxvalid/gxvalid.h
	src/gxvalid/gxvmod.h
	src/gxvalid/gxvmort.h
	src/psaux/psauxerr.h
	src/psaux/t1cmap.h
	src/psaux/afmparse.h
	src/psaux/t1decode.h
	src/psaux/psobjs.h
	src/psaux/psconv.h
	src/psaux/psauxmod.h
	src/cid/cidtoken.h
	src/cid/cidgload.h
	src/cid/cidobjs.h
	src/cid/ciderrs.h
	src/cid/cidriver.h
	src/cid/cidparse.h
	src/cid/cidload.h
	src/pfr/pfrerror.h
	src/pfr/pfrload.h
	src/pfr/pfrtypes.h
	src/pfr/pfrcmap.h
	src/pfr/pfrobjs.h
	src/pfr/pfrdrivr.h
	src/pfr/pfrsbit.h
	src/pfr/pfrgload.h
	src/otvalid/otvgpos.h
	src/otvalid/otvmod.h
	src/otvalid/otvcommn.h
	src/otvalid/otvalid.h
	src/otvalid/otverror.h
	src/autofit/afindic.h
	src/autofit/afdummy.h
	src/autofit/afmodule.h
	src/autofit/afwrtsys.h
	src/autofit/afhints.h
	src/autofit/afloader.h
	src/autofit/aflatin2.h
	src/autofit/aferrors.h
	src/autofit/afpic.h
	src/autofit/afglobal.h
	src/autofit/afwarp.h
	src/autofit/afblue.h
	src/autofit/afscript.h
	src/autofit/aftypes.h
	src/autofit/afcjk.h
	src/autofit/aflatin.h
	src/autofit/afangles.h
	src/pshinter/pshrec.h
	src/pshinter/pshglob.h
	src/pshinter/pshmod.h
	src/pshinter/pshnterr.h
	src/pshinter/pshpic.h
	src/pshinter/pshalgo.h
	src/truetype/ttsubpix.h
	src/truetype/tterrors.h
	src/truetype/ttdriver.h
	src/truetype/ttpic.h
	src/truetype/ttgload.h
	src/truetype/ttgxvar.h
	src/truetype/ttpload.h
	src/truetype/ttinterp.h
	src/truetype/ttobjs.h
	src/raster/ftmisc.h
	src/raster/rasterrs.h
	src/raster/ftrend1.h
	src/raster/ftraster.h
	src/raster/rastpic.h
	src/psnames/psnamerr.h
	src/psnames/pspic.h
	src/psnames/pstables.h
	src/psnames/psmodule.h
	src/base/md5.h
	src/base/basepic.h
	src/base/ftbase.h
	)

target_compile_definitions(freetype-em PRIVATE
	FT2_BUILD_LIBRARY
	)

install(TARGETS freetype-em
	EXPORT ${pkgname}
	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}/${pkgname}
	FILE_SET HEADERS DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${pkgname}/freetype-em
	)
